# ape

./: Cargo.toml  Justfile  README.md
crates/ape-bytebeats/: Cargo.toml
crates/ape-bytebeats/src/: lib.rs
crates/ape-cli/: Cargo.toml
crates/ape-cli/src/: main.rs
crates/ape-core/: Cargo.toml
crates/ape-core/src/: dsp.rs  engine.rs  export.rs  lib.rs
crates/ape-gui/: Cargo.toml
crates/ape-gui/src/: main.rs
crates/ape-plugin/: Cargo.toml
crates/ape-plugin/src/: editor.rs  lib.rs
