[package]
name = "ape-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.3", features = ["derive"] }
color-eyre = "0.6.2"
ctrlc = "3.2.3"
ape-core = { path = "../ape-core" }
ape-bytebeats = { path = "../ape-bytebeats" }
